Input styling. Reset button

--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,11 @@ scroll-shadow {
 
   width: 100%;
 }
+
+input:focus {
+  background-color: rgb(195, 233, 249);
+  outline: none;
+  box-shadow: 0 0 0 2px hsla(34, 100%, 50%, 0.8),
+    inset 0 2px 4px 0 rgba(0, 0, 0, 0.7);
+  transition: box-shadow 0.15s ease;
+}
