--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ scroll-shadow {
   --scroll-shadow-right: radial-gradient(farthest-side at 100%, #0003, #0000);
 
   width: 100%;
+  overflow-x: scroll;
 }
 
 input:focus {
